[package]
name = "kuckucksuhr"
version = "0.2.0"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2021"
license = "CDDL-1.1"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"
chrono-tz = "0.6"
rand = "0.8"
mastodon-async = { version = "1.0.3", features = ["toml"] }
