[package]
name = "kuckucksuhr"
version = "0.4.0"
authors = ["Cthulhux <git@tuxproject.de>"]
edition = "2021"
license = "CDDL-1.1"

[dependencies]
chrono = "0.4"
chrono-tz = "0.9"
mastodon-async = { version = "1", default-features = false, features = ["toml", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }
